Fix |ABOUT ME| title wraping text ond desktop

--- a/docs/css/index/style.scss
+++ b/docs/css/index/style.scss
@@ -205,6 +205,7 @@ html {
         u {
             font-weight: 300;
         }
+        width: max-content;
     }
 }
 .--section-content {
